# RA.Aid

./: .gitignore  .ra-prompt  .replit  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  cf-docs-build.sh  components.json  create_initial_migration.py  issue.md  pyproject.toml  replit.nix  requirements-dev.txt  requirements.txt  to-test.md
.githooks/: pre-push
.github/workflows/: release.yml  tests.yml
.ra-aid/tech-debt/: 1.md
adr/: webui.md
docs/: cf-build.sh  docusaurus.config.ts  package-lock.json  package.json  ra-aid.openapi.json  ra-aid.openapi.yml  sidebars.ts
docs/.cf/: build.sh
docs/docs/: contributing.md  getting-help.md  getting-started.md  intro.md
docs/docs/api/: _category_.json  create-session-v-1-session-post.api.mdx  get-config-config-get.api.mdx  get-root-get.api.mdx  get-session-trajectories-v-1-session-session-id-trajectory-get.api.mdx  get-session-v-1-session-session-id-get.api.mdx  list-sessions-v-1-session-get.api.mdx  (+3 more)
docs/scripts/: README.md  version.js
examples/custom-tools-mcp/: README.md  mcp_server.py  tools.py
experiment/: llm_test.py
frontend/: package-lock.json  package.json
frontend/common/: components.json  package-lock.json  package.json  tailwind.config.js  tailwind.preset.js  tsconfig.json
frontend/vsc/: CHANGELOG.md  package-lock.json
frontend/web/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.js
ra_aid/: __init__.py  __main__.py  __version__.py  agent_context.py  agent_utils.py  agents_alias.py  anthropic_message_utils.py  anthropic_token_limiter.py  config.py  dependencies.py  env.py  env_inv.py  env_inv_context.py  exceptions.py  fallback_handler.py  file_listing.py  globals.py  llm.py  logging_config.py  model_detection.py  models_params.py  models_tokens.py  project_info.py  project_state.py  prompts.py  provider_strategy.py  tool_configs.py  tool_leaderboard.py  version_check.py
ra_aid/agent_backends/: ciayn_agent.py
ra_aid/agents/: __init__.py  ciayn_agent.py  implementation_agent.py  key_facts_cleaner_agent.py  key_facts_gc_agent.py  key_snippets_gc_agent.py  planning_agent.py  research_agent.py  research_notes_gc_agent.py
ra_aid/callbacks/: anthropic_callback_handler.py  default_callback_handler.py
ra_aid/chat_models/: deepseek_chat.py
ra_aid/console/: __init__.py  common.py  cowboy_messages.py  formatting.py  output.py
ra_aid/database/: __init__.py  connection.py  migrations.py  models.py  pydantic_models.py  utils.py
ra_aid/migrations/: 002_20250301_212203_add_key_fact_model.py  003_20250302_163752_add_key_snippet_model.py  003_20250313_add_session_token_tracking.py.bak  004_20250302_200312_add_human_input_model.py  004_20250313_add_trajectory_token_tracking.py.bak  005_20250302_201611_add_human_input_reference.py  006_20250303_211704_add_research_note_model.py  007_20250310_184046_add_trajectory_model.py  008_20250311_191232_add_session_model.py  009_20250311_191517_add_session_fk_to_human_input.py  010_20250311_191617_add_session_fk_to_key_fact.py  011_20250311_191732_add_session_fk_to_key_snippet.py  012_20250311_191832_add_session_fk_to_research_note.py  013_20250311_191701_add_session_fk_to_trajectory.py  014_20250312_140700_add_token_fields_to_trajectory.py  014_add_session_and_traj_token_tracking.py  015_20250408_140800_add_session_status.py  017_remove_extra_cost_token_fields.py
ra_aid/model_formatters/: __init__.py  key_facts_formatter.py  key_snippets_formatter.py  research_notes_formatter.py
ra_aid/proc/: interactive.py
ra_aid/prompts/: __init__.py  chat_prompts.py  ciayn_prompts.py  common_prompts.py  custom_tools_prompts.py  expert_prompts.py  human_prompts.py  implementation_prompts.py  key_facts_cleaner_prompts.py  key_facts_gc_prompts.py  key_snippets_gc_prompts.py  planning_prompts.py  reasoning_assist_prompt.py  research_notes_gc_prompts.py  research_prompts.py  web_research_prompts.py
ra_aid/scripts/: __init__.py  __main__.py  all_sessions_usage.py  cli.py  extract_changelog.py  generate_swebench_dataset.py  last_session_usage.py  session_usage.py
ra_aid/server/: __init__.py  api_v1_sessions.py  api_v1_spawn_agent.py  broadcast_sender.py  connection_manager.py  server.py
ra_aid/tests/: __init__.py  test_env.py
ra_aid/text/: __init__.py  code_cleaning.py  key_facts_formatter.py  processing.py
ra_aid/tools/: __init__.py  agent.py  expert.py  file_str_replace.py  fuzzy_find.py  handle_user_defined_test_cmd_execution.py  human.py  list_directory.py  memory.py  monorepo.py  note_tech_debt.py  programmer.py  read_file.py  reflection.py  research.py  ripgrep.py  shell.py  web_search_tavily.py  write_file.py
ra_aid/utils/: __init__.py  file_utils.py  mcp_client.py  singleton.py
ra_aid/webui/: __init__.py  server.py
scripts/: __init__.py  extract_changelog.py  generate_openapi.py  generate_swebench_dataset.py  get_session_usage.py
tests/: .gitignore  conftest.py  pytest.ini  test_file_listing.py  test_list_file.py  test_non_git_file_listing.py  test_project_info.py  test_project_state.py
tests/agent_backends/: test_bundled_tools.py
tests/data/: invalid_case_1.txt  invalid_case_2.txt  invalid_case_3.txt  test_case_1.txt  test_case_2.txt  test_case_3.txt  test_case_4.txt  test_case_5.txt  test_case_6.txt  valid_function_calls.txt
tests/ra_aid/: test_agent_context.py  test_agent_should_exit_ciayn.py  test_agent_utils.py  test_anthropic_strategy.py  test_anthropic_token_limiter.py  test_ciayn_agent.py  test_crash_propagation.py  test_default_provider.py  test_env.py  test_fallback_handler.py  test_info_query.py  test_llm.py  test_main.py  test_model_detection.py  test_ollama_config_repository.py  test_programmer.py  test_provider_integration.py  test_show_thoughts.py  test_temperature_handling.py  test_token_usage_tracking.py  test_tool_configs.py  test_tool_configs_research_tools.py  test_utils.py  test_version_check.py  test_wipe_project_memory.py
tests/scripts/: test_extract_changelog.py
vsc/: README.md  package.json
vsc/src/: extension.ts
webui/: README.md  index.html  requirements.txt  script.js  server.py
(+193 files in other folders)
